--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@ Programa principal
 <button onclick="location.href = 'arreglos.htm';">Arreglos</button>
 <button onclick="location.href = 'funciones.htm';">Funciones</button>
 <button onclick="location.href = 'objetos.htm';">Objetos</button>
+<button onclick="location.href = 'formularios.htm';">Formularios</button>
+<button onclick="location.href = 'transformaciones.htm';">Transformaciones</button>
 <br/>
 <br/>
 <br/>
